--- a/imperio/estilos/style.css
+++ b/imperio/estilos/style.css
@@ -23,10 +23,18 @@
 :root{/* - VARIAVEIS - */
    --mainbackcolor:#883636;
 	--secbackcolor:#FFCAB8;
+	--verylightgray:#eeeeee;
+	--lightButton:#3cdd9d;
+	--normalButton:#36cb90;
+	--normaltransparentButton:#39c08ae1;
+	--heavyButton:#2ca172;
 	--titlefont:'Cherly', sans-serif;
 	--sectitlefont:'Arnitta', sans-serif;
+	--arialFont: Arial, Helvetica, sans-serif;
+	--usualFont:'Dosis', sans-serif;
+	--promoFont:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--maintext:Verdana, Geneva, Tahoma, sans-serif;}
-::selection{ /* COR DE SELEÇÃO AO ARRASTAR MOUSE EM OBJETOS */
+::selection{ /* COR DE SELEÇÃO AO ARRASTAR MOUSE SOBRE OBJETOS */
 	background: var(--secbackcolor);}
 *{/* - START - */
     margin: 0px;
@@ -59,7 +67,7 @@ header{ /* HEADER */
 	transition: 1s;
 }
 #rightHeader img:hover{
-	background-color: #FFCAB8;
+	background-color: var(--secbackcolor);
 	padding: 23px;
 	filter: none;
 	transition: .4s;
@@ -80,7 +88,7 @@ header{ /* HEADER */
 	transition: 1s;
 }
 #leftHeader img:hover{
-	background-color: #FFCAB8;
+	background-color: var(--secbackcolor);
 	padding: 22px;
 	filter: none;
 	transition: .4s;
@@ -116,20 +124,12 @@ header{ /* HEADER */
 	margin-top: 48px;
 	margin-bottom: 50px;
 	margin-left: -20px;
-	
-	/* Tipos de LOGO TESTAR */
-	/*border: 1.5px dotted black;*/
-	/*border: 3px double black;*/
-	/*border: 4px double #883636;*/
-	/*border: 2px dotted black;*/
-	/*border: 2px dotted #883636;*/
-	/*border: 2px dotted #883636;*/
-	/*border: 4px outset #883636;*/
-	border: 8px double #883636;
+
+	border: 8px double var(--mainbackcolor);
 	border-radius: 0px 30px 0px 30px;
 
-	background-color: #FFCAB8;
-	color: #883636;
+	background-color: var(--secbackcolor);
+	color: var(--mainbackcolor);
 
 	padding-left: 5px;
 	padding-right: 5px;
@@ -142,24 +142,23 @@ header{ /* HEADER */
 	font-weight: 500;
 	margin-top: 45px;
 	margin-left: -125px;
-	text-shadow: 0px 1px 1px #883636;
+	text-shadow: 0px 1px 1px var(--mainbackcolor);
 }
 main{ /* MAIN */
 	flex: 1;
 	width:100%;
-	background-color: rgb(255, 255, 255);
+	background-color: white;
 }
 #mainSlider{
 	width: 100%;
-	height: 58vw; /*É AQUI????????? 59vw*/
+	height: 58vw;
 	overflow-y: hidden;
 	overflow-x: hidden;
 }
 #showProduct{
-	/*border: 1px solid black;*/
-	margin: 20px auto 80px auto;
+	margin: 20px auto 60px auto;
 	max-width: 1200px;
-	/*max-height: 800px;*/
+
 	padding: 25px 15px 0px 15px;
 	display: none;
 	gap: 10px;
@@ -168,7 +167,7 @@ main{ /* MAIN */
 	grid-template-areas: "mimg" "simg" "cart" "cbtn" "share" "def";
 }
 .pshowDefinition{
-	border-left: 1px solid rgb(238, 238, 238);
+	border-left: 1px solid var(--verylightgray);
 	padding-left: 10px;
 	width: 100%;
 	grid-area: def;
@@ -187,7 +186,6 @@ main{ /* MAIN */
 	width: 100%;
 	font-family: var(--maintext);
 	font-size: .8em;
-	
 }
 .pshowCartadd{
 	padding-left: 20px;
@@ -195,50 +193,51 @@ main{ /* MAIN */
 	font-family: var(--maintext);
 	font-size: .8em;
 	grid-area: cart;
-
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	border-left: 1px solid var(--verylightgray);
 }
 .olderPrice{
 	margin-top: 4vw;
-	color: rgb(150, 150, 150);
-	font-family: 'Dosis', sans-serif;
+	color: #969696;
+	font-family: var(--usualFont);
 	font-size: 1.5em;
 	font-weight: 100;
 	text-decoration: line-through;
 }
 .actualPrice{
 	color: rgb(22, 22, 22);
-	font-family: 'Dosis', sans-serif;
+	font-family: var(--usualFont);
 	font-size: 2.2em;
 }
 .cartButton{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	grid-area: cbtn;
 	border-radius: 2px;
-	text-align: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	line-height: 38px;
-	/*margin-top: 15vw;*/
 	height: fit-content;
-	font-family: 'Dosis', sans-serif;
+	font-family: var(--usualFont);
 	font-size: 2em;
+	text-align: center;
 	color: white;
-	background-color: #36cb90;
-	box-shadow: 0px 2px 0px #2ca172;
+	background-color: var(--normalButton);
+	box-shadow: 0px 2px 0px var(--heavyButton);
 	transition: .4s;
 }
 .cartButton:hover{
 	cursor: pointer;
-	background-color: #3cdd9d;
+	background-color: var(--lightButton);
 	transition: .4s;
 }
 .pshowMainimagespace{
 	width: 100%;
 	padding-top: calc(60px - 5vw);
-	/*padding-left: 5vw;
-	padding-right: 5vw;*/
 	grid-area: mimg;
 	overflow: hidden;
 }
@@ -254,7 +253,8 @@ main{ /* MAIN */
 }
 .SecimgA, .SecimgB, .SecimgC{
 	outline: 0px double var(--mainbackcolor);
-	width: 30%;
+
+	width: 25%;
 	padding-left: 3vw;
 	padding-right: 3vw;
 	transition: .1s;
@@ -265,14 +265,12 @@ main{ /* MAIN */
 	cursor: pointer;
 }
 .pshowPromo{
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	font-size: calc(.55em + 1.1vw);
+	font-family: var(--promoFont);
+	font-size: calc(1em + .5vw);
 	font-weight: 600;
 	text-align: center;
 	position: sticky;
-	/*position: absolute;*/
 	height: fit-content;
-	/*width: 44vw;*/
 	max-width: 100%;
 	margin-top: -3vw;
 	
@@ -284,10 +282,10 @@ main{ /* MAIN */
 	font-family: 'Dosis', sans-serif;
 	font-size: 1.4em;
 	font-weight: 600;
-	border-right: 1px solid rgb(245, 245, 245);
 	grid-area: share;
 }
 .pshowShare > img{
+	border-radius: 9px;
 	width: calc(40px + 1vw);
 	transition: 1s;
 }
@@ -298,13 +296,19 @@ main{ /* MAIN */
 	transition: .4s;
 	cursor: pointer;
 }
+.returnLink{
+	font-family: var(--maintext);
+	color: #883636;
+	text-decoration: underline;
+}
 #msgIntro{
 	padding-top: 16px;
 	text-align: center;
 	width: 100%;
 	height: 50px;
 	background-color: var(--mainbackcolor);
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: var(--promoFont);
+	font-size: 1em;
 	font-weight: 600;
 	color: white;
 	transition: 1s;
@@ -320,10 +324,9 @@ main{ /* MAIN */
 	transition: 1s;
 }
 #shopContainer{
-	/*background-color: rgb(201, 185, 175);*/
+	/* VAZIO */
 }
 .shopItens{
-	/*background-color: rgb(205, 228, 236);*/
 	margin: -4vw auto 0 auto;
 	max-width: 600px;
 
@@ -332,7 +335,7 @@ main{ /* MAIN */
 	flex-wrap: wrap;
 	justify-content: center;
 
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: var(--arialFont);
 	
 }
 .shopProduct{
@@ -341,7 +344,7 @@ main{ /* MAIN */
 	margin-left: calc(.5vw);
 	width: 220px;
 	height: 300px;
-	border: 1px solid rgb(240, 240, 240);
+	border: 1px solid var(--verylightgray);
 	outline: 0px double var(--mainbackcolor);
 	display: flex;
 	flex-direction: column;
@@ -357,17 +360,16 @@ main{ /* MAIN */
 	width: 80%;
 	padding: 20px 10px;
 	margin: 0 auto auto auto;
-	/*border-bottom: 1px solid rgb(233, 233, 233);*/
 }
 .descProduto{
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	
 }
 .antigoProduto{
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: var(--usualFont);
+	/*font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
 	width: 100%;
 	text-align: center;
 	text-decoration: line-through;
@@ -386,40 +388,35 @@ main{ /* MAIN */
 	padding-right: 10px;
 }
 .valorProduto{
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: var(--usualFont);
 	text-align: center;
 	font-weight: 600;
-	font-size: 1.1em;
+	font-size: 1.2em;
 	padding-bottom: 5px;
-}
-.failError{
-	font-size: 2em;
-	text-align: center;
 }
 footer{ /* FOOTER */
     display: flex;
     flex-direction: row-reverse;
 	justify-content: left;
     
-	/*margin-left: 50px;*/
 	font-family: var(--maintext);
 	margin-top: 100px;
 	padding-top: 50px;
 	padding-left: 5px;
 	height: 400px;
 	width: 100%;
-	background-color: #883636;
+	background-color: var(--mainbackcolor);
 }
 #creditsFooter{
 	padding: 5px;
 	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
-	background-color: #FFCAB8;
+	font-family: var(--arialFont);
+	background-color: var(--secbackcolor);
 	font-size: .75em;
 }
 #creditsFooter > h3 > a{
 	text-decoration: none;
-	color: #883636;
+	color: var(--mainbackcolor);
 	transition: .4s;
 	font-size: 1em;
 }
@@ -434,7 +431,7 @@ footer{ /* FOOTER */
 }
 .footerblock h1{
 	font-size: 1.5em;
-	color: #FFCAB8;
+	color: var(--secbackcolor);
 }
 .footerblock > ul{
 	list-style: none;
@@ -443,7 +440,7 @@ footer{ /* FOOTER */
 	padding-top: 5px;
 }
 .footeritem > a{
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: var(--arialFont);
 	text-decoration: none;
 	color: white;
 	font-size: 1em;
@@ -453,10 +450,9 @@ footer{ /* FOOTER */
 }
 .footeritem > a:hover{
 	width: fit-content;
-	background-color: #FFCAB8;
+	background-color: var(--secbackcolor);
 	color: black;
 	transition: .4s;
-	/*outline: 3px solid black;*/
 }
 .permaconectado{
 	display: flex;
@@ -470,11 +466,9 @@ footer{ /* FOOTER */
 	transition: 1s;
 }
 .permaconectado > li > a > img:hover{
-	background-color: #FFCAB8;
+	background-color: var(--secbackcolor);
 	transition: .4s;
 	filter: none;
-	/*outline: 3px solid black;*/
-	/*box-shadow: 0px 0px 40px #003547;*/
 }
 .shadowBox{
 	position: absolute;
@@ -482,7 +476,7 @@ footer{ /* FOOTER */
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.250);
+	background-color: #00000040;
 	overflow-y: hidden;
 }
 /* ------------ LEFT DINAMIC MENU ------------ */
@@ -510,8 +504,8 @@ footer{ /* FOOTER */
 }
 .menuItens:hover{
 	text-indent: 30px;
-	background-color: #883636;
-	color: #FFCAB8;
+	background-color: var(--mainbackcolor);
+	color: var(--secbackcolor);
 	transition: .4s;
 	cursor: pointer;
 }
@@ -524,8 +518,8 @@ footer{ /* FOOTER */
 	vertical-align: middle;
 	text-indent: 20px;
 	transition: 1s;
-	background-color: #883636;
-	color: #ffffff;
+	background-color: var(--mainbackcolor);
+	color: white;
 }
 .menuTitles > img{
 	width: 25px;
@@ -538,7 +532,7 @@ footer{ /* FOOTER */
 	flex-direction: row;
 	height: fit-content;
 	font-size: .65em;
-	background-color: #883636;
+	background-color: var(--mainbackcolor);
 	color: white;
 }
 #menuHeader > h1{
@@ -558,7 +552,7 @@ footer{ /* FOOTER */
 	padding: 10px;
 }
 #menuHeader > span:hover{
-	background-color: #FFCAB8;
+	background-color: var(--secbackcolor);
 	filter: none;
 	transition: .4s;
 }
